@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.2.3-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.2-0
 - Replace use of simplib's deprecated Puppet 3 validate_between
   with Simplib::Cron::* types.  This change allows more flexibility
